@@ -4,7 +4,6 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -29,7 +28,7 @@ class ArticleFactoryTests {
 
 		@Test
 		void createFromFrontMatter_multipleColons_getValidArticle() {
-			List<String> frontMatter = Arrays.asList(
+			List<String> frontMatter = List.of(
 					"title: Cool: A blog post",
 					"tags: [$TAG, $TOG]",
 					"date: 2020-01-23",
@@ -48,7 +47,7 @@ class ArticleFactoryTests {
 
 		@Test
 		void createFromFrontMatter_allTagsCorrect_getValidArticle() {
-			List<String> frontMatter = Arrays.asList(
+			List<String> frontMatter = List.of(
 					"title: A cool blog post",
 					"tags: [$TAG, $TOG]",
 					"date: 2020-01-23",
@@ -75,7 +74,7 @@ class ArticleFactoryTests {
 
 		@Test
 		void createFromFile_allTagsCorrect_getValidArticle() {
-			List<String> file = Arrays.asList(
+			List<String> file = List.of(
 					"---",
 					"title: A cool blog post",
 					"tags: [$TAG, $TOG]",
